# SecondaryStructureMetrics

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg-configuration.json  vcpkg.json
.github/workflows/: cmake-multi-platform.yml
SSMetrics/: CMakeLists.txt  SSMetrics.cpp  SSMetrics.hpp  Utils.cpp  Utils.hpp
SSMetrics/Metrics/: Accuracy.cpp  Accuracy.hpp  LooseOverlap.cpp  LooseOverlap.hpp  Sov94.cpp  Sov94.hpp  Sov99.cpp  Sov99.hpp  SovRefine.cpp  SovRefine.hpp  Sovrefine.hpp  StrictOverlap.cpp  StrictOverlap.hpp
SSMetrics/Metrics/Interfaces/: IMetric.cpp  IMetric.hpp  INormMetric.cpp  INormMetric.hpp  Metric.cpp  Metric.hpp  NormMetric.cpp  PrecalculatedMetric.cpp  PrecalculatedMetric.hpp  PrecalculatedNormMetric.cpp  PrecalculatedNormMetric.hpp  SSRefLength.cpp  SSRefLength.hpp
SSMetrics/Regions/: OverlapBlock.cpp  OverlapBlock.hpp  Region.cpp  Region.hpp  SSBlock.cpp  SSBlock.hpp
docs/: perf_comparison.sh
src/: CMakeLists.txt
src/CLI/: App.cpp  App.hpp  CMakeLists.txt  Utils.cpp  Utils.hpp
src/CLI/include/: App.hpp  Utils.hpp
src/Metrics/: CMakeLists.txt  Sov94.cpp  SovRefine.cpp
src/Metrics/Interfaces/: IMetric.cpp  PrecalculatedMetric.cpp
src/Metrics/MutMetrics/: MutAccuracy.cpp  MutConsistency.cpp  MutPrecision.cpp
src/Metrics/MutMetrics/Interfaces/: IMutMetric.cpp  MutMetric.cpp
src/Metrics/MutMetrics/include/: MutAccuracy.hpp  MutConsistency.hpp  MutPrecision.hpp
src/Metrics/MutMetrics/include/Interfaces/: IMutMetric.hpp  MutMetric.hpp
src/Metrics/Regions/: Region.cpp
src/Metrics/SSMetrics/: Accuracy.cpp  LooseOverlap.cpp  Sov94.cpp  Sov99.cpp  SovRefine.cpp  StrictOverlap.cpp
src/Metrics/SSMetrics/Interfaces/: IMetric.cpp  INormMetric.cpp  Metric.cpp  NormMetric.cpp  PrecalculatedNormMetric.cpp
src/Metrics/SSMetrics/Regions/: OverlapBlock.cpp  Region.cpp  SSBlock.cpp
src/Metrics/SSMetrics/include/: LooseOverlap.hpp  Sov94.hpp  Sov99.hpp  StrictOverlap.hpp
src/Metrics/SSMetrics/include/Interfaces/: IMetric.hpp  INormMetric.hpp  Metric.hpp  NormMetric.hpp
src/Metrics/SSMetrics/include/Regions/: OverlapBlock.hpp  Region.hpp  SSBlock.hpp
src/Metrics/StatMetrics/: ConfusionMatrix.cpp  StatAccuracy.cpp  StatFalseDiscoveryRate.cpp  StatFalseNegRate.cpp  StatFalseOmissionRate.cpp  StatFalsePosRate.cpp  StatMatthewsCorrelationCoefficient.cpp  StatNegPredVal.cpp  StatPosPredVal.cpp  StatSensitivity.cpp  StatSpecificity.cpp
src/Metrics/StatMetrics/Interfaces/: IStatMetric.cpp  StatMetric.cpp
src/Metrics/StatMetrics/include/: ConfusionMatrix.hpp  StatAccuracy.hpp  StatFalseDiscoveryRate.hpp  StatFalseNegRate.hpp  StatFalseOmissionRate.hpp  StatFalsePosRate.hpp  StatMatthewsCorrelationCoefficient.hpp  StatNegPredVal.hpp  StatPosPredVal.hpp  StatSensitivity.hpp  StatSpecificity.hpp
src/Metrics/StatMetrics/include/Interfaces/: IStatMetric.hpp  StatMetric.hpp
src/Metrics/include/: Sov94.hpp
src/Metrics/include/Regions/: OverlapBlock.hpp  Region.hpp  SSBlock.hpp
test/: CMakeLists.txt  gtests.cpp
